[package]
name = "vulkano_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"

vulkano = { version = "0.33.0" }
vulkano-shaders = { version = "0.33.0" }
vulkano-macros = "0.33.0"
vulkano-util = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.3"

mlua = { version = "0.8", features = ["lua54", "vendored"] }
