[package]
name = "vulkano_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
quote = "1"
syn = { version = "1.0.105", features = ["full", "extra-traits"] }
image = "0.24"
rand = { version = "0.5.5" }
vulkano = { version = "0.33.0" }
vulkano-shaders = { version = "0.33.0" }
vulkano-macros = { verison = "0.33.0" }
vulkano-util = { version = "0.33.0" }
vulkano-win = { version = "0.33.0" }
winit = { version = "0.28.3" }
mlua = { version = "0.8", features = ["lua54", "vendored"] }
tokio = { version = "1.28.2", features = ["full"] }

[dependencies.gltf]
version = "1.0"
features = ["extras", "names", "KHR_materials_unlit"]